# mlipgauge

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: architecture.d2
results/: 0.1.0a1_calibration.json  0.1.0a1_gate.json  0.1.0a2_calibration.json  0.1.0a2_gate.json
scripts/: _measure_common.py  measure_calibration.py  measure_gate.py  verify_step.py
src/mlipgauge/: __init__.py  cli.py  gauge_api.py  types.py
src/mlipgauge/backends/: __init__.py  _ase_common.py  base.py  chgnet.py  mace.py  mattersim.py  mock.py  normalize.py  runner.py
src/mlipgauge/core/: __init__.py  al_trigger.py  calibration.py  gauge.py  physics_gate.py  uq.py
tests/: test_calibration.py  test_cli.py  test_determinism.py  test_gauge_api.py  test_measure.py  test_mock_pipeline.py  test_normalize.py  test_physics_gate.py  test_types.py  test_uq.py
